--- a/services/pom.xml
+++ b/services/pom.xml
@@ -172,6 +172,12 @@
             <version>1.4.11</version> <!-- 使用最新稳定版 -->
         </dependency>
 
+        <dependency>
+            <groupId>net.sf.dozer</groupId>
+            <artifactId>dozer</artifactId>
+            <version>5.5.1</version>
+        </dependency>
+
 
     </dependencies>
 
