--- a/services/auth-service/src/main/resources/application-dev.yml
+++ b/services/auth-service/src/main/resources/application-dev.yml
@@ -3,17 +3,17 @@ server:
 
 spring:
   application:
-    name: Auth-Service
+    name: auth-service
   cloud:
     nacos:
       server-addr: 127.0.0.1:8848
-#  data:
-#    redis:
-#      database: 1
-#      # Redis服务器地址
-#      host: 127.0.0.1
-#      # Redis服务器连接端口
-#      port: 6379
+  data:
+    redis:
+      database: 1
+      # Redis服务器地址
+      host: 127.0.0.1
+      # Redis服务器连接端口
+      port: 6379
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
