--- a/services/user-service/src/main/resources/application-dev.yml
+++ b/services/user-service/src/main/resources/application-dev.yml
@@ -7,7 +7,7 @@ upload:
 
 spring:
   application:
-    name: User-Service
+    name: user-service
   cloud:
     nacos:
       server-addr: 127.0.0.1:8848
